css/style.css
/*
Raleway:
font-family: 'Raleway', sans-serif;

Merriweather:
font-family: 'Merriweather', serif;

Source Code Pro:
font-family: 'Source Code Pro', monospace;

*/

body {
    position: relative;
    margin-left: 10%;
    margin-right: 10%;
    /* default */
    background-color: #01141b;
    /* background-image: radial-gradient(circle, #1e5157 1%, #01141b 99%); */

    /* option-2 */
    /* background-color:#1e5157; */

    font-family: 'Raleway', sans-serif;
}

.name {
    /* default */
    /* color: whitesmoke; */

    /* option-2 */
    color: #E7FFF6;
    font-weight: 600;
    font-size: 72px;

    position: relative;
    margin-bottom: 0%;
}

.short-intro {
    /* default */
    color: #87A890;

    /* option-2 */
    /* color: #0f8a97; */
    font-size: 16px;
    font-family: 'Source Code Pro', monospace;
    font-weight: 400;
    font-style: normal;

    margin-top: 0%;
}

.content {
    margin-top: 0px;
    margin-bottom: 1%;

    /* default */
    /* color: #AAF0D2; */

    /* option-2 */
    color: #CDF6E8;
    font-family: 'Merriweather', serif;
    font-size: 20px;
    text-align: left;
}

.flex-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.box {
    padding: 4px;
    margin-right: 10px;
    
    border-radius: 4px;

    cursor: default;
}

.box-content {
    margin: 0px;
    font-family: 'Source Code Pro', monospace;
}

.box:nth-child(even) {
    background-color: #277AF5;
}

.box:nth-child(even):hover {
    background-color: white;
    color: #277AF5;
}

.box:nth-child(odd) {
    /* default */
    background-color: #FF2BB6;

    /* option-1 */
    /* background-color: darkkhaki; */
}

.box:nth-child(odd):hover {
    background-color: white;

    /* default */
    color: #FF2BB6;

    /* option-2 */
    /* color: darkkhaki; */
}

.media-link {
    padding: 7px;
    border-radius: 4px;

    margin-right: 10px;

    font-family: 'Raleway', sans-serif;;
    font-weight: 600;
}

.twitter-color {
    background-color: #1da1f2;

    color: white;
}

.twitter-color:hover {
    background-color: white;

    color: #1da1f2;
}

.ig-color {
    /* background-image: linear-gradient(-135deg, #405de6,#5851db,#833ab4,#c13584,#e1306c,#f56040,#f77737,#fcaf45,#ffdc80); */
    background-color: deeppink;

    color: white;
}

.ig-color:hover {
    /* filter: brightness(90%); */
    background-color: white;

    color: deeppink;
}

.in-color {
    background-color:#2867b2;

    color:white;
}

.in-color:hover {
    background-color: white;

    color: #2867b2;
}

.gh-color {
    background-color: black;

    color: white;
}

.gh-color:hover {
    background-color: white;

    color: black;
}

.cf-color {
    /* default */
    background-color: red;
    color: white;
    /* color: #EDF5E9; */

    /* option-2 */
    /* background-color: #648db1; */
    /* color: white; */
}

.cf-color:hover {
    /* opacity: 100%; */
    /* default */
    background-color: white;
    color: red;

    /* option-2 */
    /* background-color: white; */
    /* color: #648db1; */
}

#title {
    position: relative;
    margin-left: 0%;
}

#introduction {
    margin-top: 4%;
}

@media screen and (max-width:360px) {
    body {
        position: relative;
        margin-left: 10%;
        margin-right: 10%;
        /* default */
        background-color: #01141b;
        /* background-image: radial-gradient(circle, #1e5157 1%, #01141b 99%); */
    
        /* option-2 */
        /* background-color:#1e5157; */
    
        font-family: 'Raleway', sans-serif;
    }
    
    .name {
        /* default */
        /* color: whitesmoke; */
    
        /* option-2 */
        color: #E7FFF6;
        font-weight: 600;
        font-size: 64px;
    
        position: relative;
        margin-bottom: 0%;
    }
    
    .short-intro {
        /* default */
        color: #87A890;
    
        /* option-2 */
        /* color: #0f8a97; */
        font-size: 12px;
        font-family: 'Source Code Pro', monospace;
        font-weight: 400;
        font-style: normal;
    
        margin-top: 0%;
    }
    
    .content {
        margin-top: 0px;
        margin-bottom: 1%;
    
        /* default */
        /* color: #AAF0D2; */
    
        /* option-2 */
        color: #CDF6E8;
        font-family: 'Merriweather', serif;
        font-size: 16px;
        text-align: left;
    }

    .flex-container {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }
    
    .box {
        padding: 4px;
        margin-right: 7px;
        margin-bottom: 7px;
        
        border-radius: 7px;
    
        cursor: default;
    }

    .box-content {
        margin: 0px;
        font-family: 'Source Code Pro', monospace;
    }
    
    .box:nth-child(even) {
        background-color: #277AF5;
    }
    
    .box:nth-child(even):hover {
        background-color: white;
        color: #277AF5;
    }
    
    .box:nth-child(odd) {
        /* default */
        background-color: #FF2BB6;
    
        /* option-1 */
        /* background-color: darkkhaki; */
    }
    
    .box:nth-child(odd):hover {
        background-color: white;
    
        /* default */
        color: #FF2BB6;
    
        /* option-2 */
        /* color: darkkhaki; */
    }

    .media-link {
        padding: 7px;
        margin-right: 7px;
        margin-bottom: 7px;
        border-radius: 4px;
    
        font-family: 'Raleway', sans-serif;;
        font-weight: 600;
    }
    
    .twitter-color {
        background-color: #1da1f2;
    
        color: white;
    }
    
    .twitter-color:hover {
        background-color: white;
    
        color: #1da1f2;
    }
    
    .ig-color {
        /* background-image: linear-gradient(-135deg, #405de6,#5851db,#833ab4,#c13584,#e1306c,#f56040,#f77737,#fcaf45,#ffdc80); */
        background-color: deeppink;
    
        color: white;
    }
    
    .ig-color:hover {
        /* filter: brightness(90%); */
        background-color: white;
    
        color: deeppink;
    }
    
    .in-color {
        background-color:#2867b2;
    
        color:white;
    }
    
    .in-color:hover {
        background-color: white;
    
        color: #2867b2;
    }
    
    .gh-color {
        background-color: black;
    
        color: white;
    }
    
    .gh-color:hover {
        background-color: white;
    
        color: black;
    }
    
    .cf-color {
        /* default */
        background-color: red;
        color: white;
        /* color: #EDF5E9; */
    
        /* option-2 */
        /* background-color: #648db1; */
        /* color: white; */
    }
    
    .cf-color:hover {
        /* opacity: 100%; */
        /* default */
        background-color: white;
        color: red;
    
        /* option-2 */
        /* background-color: white; */
        /* color: #648db1; */
    }
    
    #title {
        position: relative;
        margin-left: 0%;
    }
    
    #introduction {
        margin-top: 10%;
    }
}

